# doc/swagger.json
@@ -14,7 +14,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3001/api"
+      "url": "http://localhost:3001"
     },
     {
       "url": "http://petstore.swagger.io/v2"
@@ -73,7 +73,7 @@
         }
       }
     },
-    "/user/{username}": {
+    "/users/{username}": {
       "get": {
         "tags": [
           "users"
@@ -308,6 +308,7 @@
       },
       "User": {
         "required": [
+          "name",
           "username",
           "password"
         ],
